chang color of quotes still undecided

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     border-radius: 15px;
     font-size: 23px;
     font-family: "Sedan", serif;
-    color: aliceblue;
+    color: lightgoldenrodyellow;
     display: flex;
     align-items: center;
     justify-content: center;
