make button position absolute, adjust quote and author animation using jQuery

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ body {
 #quoteBtn {
     margin-top: 20px;
     font-family: 'Courier New', Courier, monospace;
+    position: absolute;
+    margin-top: 300px;;
 }
 
 #quoteBtn:hover{
