--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ body {
     margin-top: 20px;
     font-family: 'Courier New', Courier, monospace;
     position: absolute;
-    margin-top: 300px;;
+    margin-top: 350px;
+    
 }
 
 #quoteBtn:hover{
